verified Routing Service Lab

--- a/RoutingService/Readme.adoc
+++ b/RoutingService/Readme.adoc
@@ -47,18 +47,18 @@ To start JBDS, double-click the provided icon on the dashboard.
 
 image::images/image2.png[]
 
-In the 'Project Explorer' Eclipse view, you will see our two project which we
+In the `Project Explorer` Eclipse view, you will see our two project which we
 will be using in later stages of our lab.
 
- * 'businessRulesService' for our Rules Service
- * 'routingService' for our Routing Service
+ * `businessRulesService` for our Rules Service
+ * `routingService` for our Routing Service
 
 image::images/image3.png[]
 
 
 === Opening the Flow Editor
 
-To access these code-frames, double-click the provided 'camel-context.xml' file.
+To access these code-frames, double-click the provided `camel-context.xml` file.
 
 image::images/openCamelContext.png[]
 
@@ -69,17 +69,17 @@ image::images/templateRoute.png[]
 === Developing the flow
 The flow we will be developing will perform the following steps
 
- 1. receive a comma separated values ( CSV ) MQTT message from any MQTT-Topic with the name 'iotdemo/<something>/<something'
+ 1. receive a comma separated values ( CSV ) MQTT message from any MQTT-Topic with the name `iotdemo/<something>/<something`
  2. transform the CSV message to XML
  3. send XML message to a AMQP Messagequeue
 
 ==== Adding the receiver to the flow
-Open the property setting of the 'direct:from' icon, also known as node, by selecting the icon and
-then selecting the 'Properties' pane in the Eclipse tooling.
+Open the property setting of the `direct:from` icon, also known as node, by selecting the icon and
+then selecting the `Properties` pane in the Eclipse tooling.
 
 image::images/openFromProperties.png[]
 
-Change the 'Uri' of the node to
+Change the `Uri` of the node to
 
 ```
 mqtt:mqtt.temp.receiver?host=tcp://localhost:1883&amp;subscribeTopicNames=iotdemo/#/#&amp;userName=admin&amp;password=change12_me
@@ -109,11 +109,11 @@ Start by selecting the connection between the MQTT and the second node and remov
 
 image::images/deleteFromToConnection.png[]
 
-Now you can add a 'Bean' to the MQTT Node by selecting it and adding the component 'Bean'.
+Now you can add a `Bean` to the MQTT Node by selecting it and adding the component `Bean`.
 
 image:images/addBean.png[]
 
-In the properties of the newly created 'Bean', please define the following values:
+In the properties of the newly created `Bean`, please define the following values:
 
  * *Bean Type* to `com.redhat.demo.routingService.MyHelper`
  * *Method* to `enhanceMessage`
@@ -122,15 +122,15 @@ In the properties of the newly created 'Bean', please define the following value
 image:images/defineBean.png[]
 
 What does this Node do? It will take the CSV message from the MQTT Topic and will
-hand if to a method 'enhanceMessage' in the Java Class named 'com.redhat.demo.routingService.MyHelper', which
-then creates an instance of Java Class 'Dataset', which represents all the data
+hand if to a method `enhanceMessage` in the Java Class named `com.redhat.demo.routingService.MyHelper`, which
+then creates an instance of Java Class `Dataset`, which represents all the data
 we use and need.
 
-If you want to see the Java code for 'Dataset', open the following file:
+If you want to see the Java code for `Dataset`, open the following file:
 
 image:images/openDataset.png[]
 
-'com.redhat.demo.routingService.MyHelper' is a Java Object, which we provided to
+`com.redhat.demo.routingService.MyHelper` is a Java Object, which we provided to
 you to show how simple JBoss Fuse can be extended with custom functionality.
 
 If you want to see the Java code for this object, open the following file:
@@ -141,7 +141,7 @@ image:images/openJavaBean.png[]
 Now that we have all our relevant data transformed into a Java object, we can
 use JBoss Fuse to transform it.
 
-To do so, select the 'bean myHelper' and add the 'Unmarshal' functionality.
+To do so, select the `bean myHelper` and add the `Unmarshal` functionality.
 
 image:images/addMarshall.png[]
 
@@ -154,11 +154,11 @@ This tells JBoss Fuse which functionality to use to transform the Java Object to
 ==== Adding the final send to the flow
 All that is left to do is to change our logic to send the created XML to our AMQP
 Messagequeue. To do this, select the `unmarshal` Node and drag the small black arrow to
-the 'direct:to' node.
+the `direct:to` node.
 
 image:images/connectMarshallToEnd.png[]
 
-This will take care that the XML message will be transported from the 'unmarshall' step
+This will take care that the XML message will be transported from the `unmarshall` step
 to the `direct:to` node, so you will not have to worry about the flow of the message itself.
 
 Last thing to do is to configure the sending node, to do this please select
@@ -260,13 +260,13 @@ we can easily verify this, by doing the following:
 
  [demo-user@localhost IoT_Summit_Lab]$ ./runHighSensor.sh
  Starting the producer to send messages
- Sending '70,0'
+ Sending `70,0`
 
  * Open the *ActiveMQ* panel in the JBoss Fuse admin page
 
 image:images/openActiveMQView.png[]
 
- * Click on the 'Topic' tree and verify the number for "Enqueue" and "Dequeue" for
+ * Click on the `Topic` tree and verify the number for "Enqueue" and "Dequeue" for
  our topic *iotdemo.temperature.4711*. This entry will tell you how many messages
  have been received on this MQTT-Topic and how many of these have been read from
  the Topic.
