--- a/BusinessRulesService/Readme.adoc
+++ b/BusinessRulesService/Readme.adoc
@@ -31,11 +31,11 @@ The Rules Service can be configured via the following environment variables
 [width="80%",frame="topbot",options="header"]
 |==================================
 | Variable |  Description | Default Value
-| SOURCE_AMQ_BROKER | URL of the Message Broker who provides the Messagequeue to read Sensordata from | tcp://receiver:61616
+| SOURCE_AMQ_BROKER | URL of the Message Broker who provides the Messagequeue to read Sensordata from | tcp://localhost:61616
 | SOURCE_QUEUE| Name of the Messagequeue to read sensordata from | message.to.rules
 | SOURCE_BROKER_ADMIN_UID | The username to connect to the source Messagebroker | admin
 | SOURCE_BROKER_ADMIN_PASSWD | The password to connect to the source Messagebroker | change12_me
-| TARGET_AMQ_BROKER | URL of the Message Broker who provides the Messagequeue to place Sensordata to | tcp://receiver:61616
+| TARGET_AMQ_BROKER | URL of the Message Broker who provides the Messagequeue to place Sensordata to | tcp://localhost:61616
 | TARGET_QUEUE| Name of the Messagequeue to write sensordata to | message.to.datacenter
 | TARGET_BROKER_ADMIN_UID | The username to connect to the target Messagebroker | admin
 | TARGET_BROKER_ADMIN_PASSWD | The password to connect to the target Messagebroker | change12_me
@@ -128,12 +128,24 @@ To do so, enter the following commands in your terminal session
 
  [demo-user@localhost IoT_Summit_Lab]$ cd
  [demo-user@localhost ~]$ cd IoT_Summit_Lab/
- [demo-user@localhost IoT_Summit_Lab]$ ./runRoutingService.sh
+ [demo-user@localhost IoT_Summit_Lab]$ ./runRulesService.sh
  < removed a output >
  AMQ-Broker tcp://localhost:61616 ready to work!
 
-== Sending a few test messages
-As during the previous lab, we will try this service by sending a test mesasge
+It should also print
+
+ Device-Type = temperature
+ Device-ID   = 4711
+ Payload     = 70
+ Result      = 1
+ ----------------------
+ Sending <?xml version="1.0" encoding="UTF-8" standalone="yes"?><dataSet><timestamp>18.05.2016 10:46:22 766</timestamp><deviceType>temperature</deviceType><deviceID>4711</deviceID><payload>70</payload><required>0</required><average>0.0</average><errorCode>1</errorCode></dataSet>
+
+as this is the message, which we did send to our environment, when we tested
+the *Routing Service*.
+
+== Sending a test messages
+As during the previous lab, we will try this service by sending a test message
 via the *Software Sensor* to our setup. The following should happen.
 
  1. *Software Sensor* sends a message with a high value via MQTT
@@ -157,4 +169,22 @@ image:images/openTerminal.png[]
  Starting the producer to send messages
  Sending '70,0'
 
- *
+ * The terminal window in which you started the *Business Rules Service*, should
+ now show the debug-output with the received data and the XML string, which
+ is forwarded to another AMQP message queue for further processing.
+
+ AMQ-Broker tcp://localhost:61616 ready to work!
+ Device-Type = temperature
+ Device-ID   = 4711
+ Payload     = 70
+ Result      = 1
+ ----------------------
+ Sending <?xml version="1.0" encoding="UTF-8" standalone="yes"?><dataSet><timestamp>17.05.2016 15:08:59 265</timestamp><deviceType>temperature</deviceType><deviceID>4711</deviceID><payload>70</payload><required>0</required><average>0.0</average><errorCode>1</errorCode></dataSet>
+ ----------------------
+
+ * Another way to verify that the message was properly processed is to take a
+ look at Red Hat JBoss Fuse console via 'http://localhost:8181', as in the previous
+ lab. The count of messages enqueued and dequeued shoud now show that one message
+ has been taken from 'message.to.rules' and placed into 'message.to.datacenter'.
+
+image:images/testResult.png[]
