--- a/BuildVM.adoc
+++ b/BuildVM.adoc
@@ -43,11 +43,11 @@ your user whatever you want.
 
 image:images/install_user.png[]
 
-After completing the install precedure, register and upgrade your RHEL installation
+After completing the install precedure, register and upgrade your RHEL installation:
 
 ```
 [demo-user@iotlab Desktop]$ sudo subscription-manager register --username=rhnuser --password=rhnpasswd
- yum upgrade
+ [demo-user@iotlab Desktop]$ sudo yum upgrade
  ```
 
 == Additional Installations
