--- a/BuildVM.adoc
+++ b/BuildVM.adoc
@@ -45,11 +45,10 @@ image:images/install_user.png[]
 
 After completing the install precedure, register and upgrade your RHEL installation:
 
-```
-[demo-user@iotlab Desktop]$ sudo subscription-manager register --username=rhnuser --password=rhnpasswd
- [demo-user@iotlab Desktop]$ sudo yum upgrade
+
+`[demo-user@iotlab Desktop]$ sudo subscription-manager register --username=rhnuser --password=rhnpasswd`
+`[demo-user@iotlab Desktop]$ sudo yum upgrade`
  
- ```
  
 == Additional Installations
 To be able to run the demo-labs, you will need the following products/packages
