--- a/BuildVM.adoc
+++ b/BuildVM.adoc
@@ -80,15 +80,15 @@ Now please create a file called '/etc/profile.d/maven_jdk.sh' with the following
  #!/bin/bash
  MAVEN_HOME=/opt/apache-maven-3.3.9
  PATH=$MAVEN_HOME/bin:$PATH
- JAVA_HOME=/usr/lib/jvm/java-1.6.0-openjdk-1.6.0.0.x86_64
+ JAVA_HOME=/usr/lib/jvm/java-1.7.0-openjdk
  M2_HOME=/opt/apache-maven-3.3.9/
  export PATH MAVEN_HOME JAVA_HOME M2_HOME
  export CLASSPATH=.
 
 And again, run the following commands
 
- [demo-user@iotlab ~]$ sudo chmod +x /etc/profile.d/maven.sh
- [demo-user@iotlab ~]$ source /etc/profile.d/maven.sh
+ [demo-user@iotlab ~]$ sudo chmod +x /etc/profile.d/maven_jdk.sh
+ [demo-user@iotlab ~]$ source /etc/profile.d/maven_jdk.sh
 
 == Download Lab codebase
 
