--- a/Readme.adoc
+++ b/Readme.adoc
@@ -81,28 +81,22 @@ Rule 2: If we get a temperature reading between 61 and 100, change the result fi
 Note: In the 2nd rule Payload, add a space between “61,” and “100”
 image::BusinessRulesService/images/sampleRule.png[]
 
-[IMPORTANT]
-Save the spreadsheet in MS Excel format
+_Note: Save the spreadsheet in MS Excel format_
 
-== Build and Run the *Business Rules Service*
+=== Step 5: Build and Run the *Business Rules Service*
 Now that we have added a few rules to our decision table, we need to build
 a new version of the service and start it.
 
-As of now, you should have a terminal open, in which you started Red Hat JBoss Fuse
-and another terminal in which you did build and deployed the Routing Service.
-
-You can use the same terminal again, to build and start the *Business Rules Service*
-
-To do so, enter the following commands in your terminal session
+Enter the following commands in a terminal
 
  [demo-user@localhost IoT_Summit_Lab]$ cd
  [demo-user@localhost ~]$ cd IoT_Summit_Lab/
  [demo-user@localhost IoT_Summit_Lab]$ ./runRulesService.sh
- < removed a output >
+ 
+It should display following output
+ < output truncated >
  AMQ-Broker tcp://localhost:61616 ready to work!
-
-It should also print
-
+.............
  Device-Type = temperature
  Device-ID   = 4711
  Payload     = 70
@@ -110,37 +104,22 @@ It should also print
  ----------------------
  Sending <?xml version="1.0" encoding="UTF-8" standalone="yes"?><dataSet><timestamp>18.05.2016 10:46:22 766</timestamp><deviceType>temperature</deviceType><deviceID>4711</deviceID><payload>70</payload><required>0</required><average>0.0</average><errorCode>1</errorCode></dataSet>
 
-as this is the message, which we did send to our environment, when we tested
-the *Routing Service*.
-
-== Sending a test messages
-As during the previous lab, we will try this service by sending a test message
-via the *Software Sensor* to our setup. The following should happen.
+=== Step 6: Test Rule Service
+We will try this service by sending a test message via the *Software Sensor* to our setup. The following should happen.
 
  1. *Software Sensor* sends a message with a high value via MQTT
- 2. *Routing Service* will pick it up, transform the message and send it
- to an AMQP message queue.
- 3. *Business Rules Service* will take the transformed message from the queue
- and will put it in another AMQP message queue, but only if a business rule
- told him to.
+ 2. *Routing Service* will pick it up, transform the message and send it to an AMQP message queue.
+ 3. *Business Rules Service* will take the transformed message from the queue and will put it in another AMQP message queue, but only if it meets the business rule condition
 
-To perform this test, perform the following steps
-
- * Open a new terminal windows
-
-image:images/openTerminal.png[]
-
- * Start the provided script *runHighSensor.sh*, which will send one message
+Enter the following commands in a new terminal
 
  [demo-user@localhost Desktop]$ cd
  [demo-user@localhost ~]$ cd IoT_Summit_Lab/
  [demo-user@localhost IoT_Summit_Lab]$ ./runHighSensor.sh
+
+It should display following output
  Starting the producer to send messages
  Sending '70,0'
-
- * The terminal window in which you started the *Business Rules Service*, should
- now show the debug-output with the received data and the XML string, which
- is forwarded to another AMQP message queue for further processing.
 
  AMQ-Broker tcp://localhost:61616 ready to work!
  Device-Type = temperature
