--- a/Readme.adoc
+++ b/Readme.adoc
@@ -96,7 +96,7 @@ Enter the following commands in a terminal
 It should display following output
  < output truncated >
  AMQ-Broker tcp://localhost:61616 ready to work!
-.............
+
  Device-Type = temperature
  Device-ID   = 4711
  Payload     = 70
@@ -131,9 +131,7 @@ It should display following output
  ----------------------
 
  * Another way to verify that the message was properly processed is to take a
- look at Red Hat JBoss Fuse console via 'http://localhost:8181', as in the previous
- lab. The count of messages enqueued and dequeued shoud now show that one message
- has been taken from 'message.to.rules' and placed into 'message.to.datacenter'.
+ look at Red Hat JBoss Fuse console via 'http://localhost:8181', The count of messages enqueued and dequeued shoud now show that one message has been taken from 'message.to.rules' and placed into 'message.to.datacenter'.
 
 image:images/testResult.png[]
 
