--- a/Readme.adoc
+++ b/Readme.adoc
@@ -78,8 +78,9 @@ The columns in this table represent the following
 
 Rule 1: If we get a temperature reading between 0 and 60, change the result field to 0
 Rule 2: If we get a temperature reading between 61 and 100, change the result field to 1
-Note: In the 2nd rule Payload, add a space between “61,” and “100”
-image::BusinessRulesService/images/sampleRule.png[]
+_Note: In the 2nd rule Payload, add a space between “61,” and “100”_
+
+image:BusinessRulesService/images/sampleRule.png[]
 
 _Note: Save the spreadsheet in MS Excel format_
 
@@ -111,13 +112,13 @@ We will try this service by sending a test message via the *Software Sensor* to 
  2. *Routing Service* will pick it up, transform the message and send it to an AMQP message queue.
  3. *Business Rules Service* will take the transformed message from the queue and will put it in another AMQP message queue, but only if it meets the business rule condition
 
-Enter the following commands in a new terminal
+* Enter the following commands in a new terminal
 
  [demo-user@localhost Desktop]$ cd
  [demo-user@localhost ~]$ cd IoT_Summit_Lab/
  [demo-user@localhost IoT_Summit_Lab]$ ./runHighSensor.sh
 
-It should display following output
+* It should display following output
  Starting the producer to send messages
  Sending '70,0'
 
@@ -133,7 +134,7 @@ It should display following output
  * Another way to verify that the message was properly processed is to take a
  look at Red Hat JBoss Fuse console via 'http://localhost:8181', The count of messages enqueued and dequeued shoud now show that one message has been taken from 'message.to.rules' and placed into 'message.to.datacenter'.
 
-image:images/testResult.png[]
+image:BusinessRulesService/images/testResult.png[]
 
 == Content
 This project uses the following subprojects:
